@@ -32,6 +32,10 @@ MenuBar.Edit.KeyBinding=E
 MenuBar.Edit.Cut.KeyBinding=X
 MenuBar.Edit.Copy.KeyBinding=C
 MenuBar.Edit.Paste.KeyBinding=V
+MenuBar.Edit.Undo.KeyBinding=U
+MenuBar.Edit.Redo.KeyBinding=R
+MenuBar.Edit.SelectAll.KeyBinding=A
+MenuBar.Edit.SelectAll.Label=Select All
 
 MenuBar.Mail.Label=Mail
 MenuBar.Mail.KeyBinding=M
@@ -99,6 +103,9 @@ MainToolbar.FileSave.ToolTip=Save the Current File
 MainToolbar.Cut.ToolTip=Cut the Selected Text
 MainToolbar.Copy.ToolTip=Copy the Selected Text
 MainToolbar.Paste.ToolTip=Paste from Clipboard
+MainToolbar.Undo.ToolTip=Undo
+MainToolbar.Redo.ToolTip=Redo
+MainToolbar.SelectAll.ToolTip=Select All
 MainToolbar.MessageNew.ToolTip=Create a New Message
 MainToolbar.MessageOpen.ToolTip=Open Selected Message
 MainToolbar.MessageSave.ToolTip=Save Selected Message to Disk
@@ -110,7 +117,8 @@ FolderWindowToolbar.Up.ToolTip=Previous Message
 FolderWindowToolbar.Open.ToolTip=Open Message
 FolderWindowToolbar.Reply.ToolTip=Reply to Sender
 FolderWindowToolbar.ReplyAll.ToolTip=Reply to All
-FolderWindowToolbar.Delete.ToolTip=Delte Message
+FolderWindowToolbar.Delete.ToolTip=Delete Message
+FolderWindowToolbar.SelectAll.ToolTip=Select All
 FolderWindowToolbar.Print.ToolTip=Print Message
 FolderWindowToolbar.Search.ToolTip=Search Folder
 
@@ -124,6 +132,9 @@ NewMessageWindowToolbar.AttachFile.ToolTip=Attach File
 NewMessageWindowToolbar.Cut.ToolTip=Cut
 NewMessageWindowToolbar.Copy.ToolTip=Copy
 NewMessageWindowToolbar.Paste.ToolTip=Paste
+NewMessageWindowToolbar.Undo.ToolTip=Undo
+NewMessageWindowToolbar.Redo.ToolTip=Redo
+NewMessageWindowToolbar.SelectAll.ToolTip=Select All
 NewMessageWindowToolbar.Print.ToolTip=Print this Message
 NewMessageWindowToolbar.Detach.ToolTip=Attach/Detach Window
 
@@ -132,6 +143,7 @@ MessageWindowToolbar.ReplyAll.ToolTip=Reply to All
 MessageWindowToolbar.Forward.ToolTip=Forward Message
 MessageWindowToolbar.Delete.ToolTip=Delete Message
 MessageWindowToolbar.Copy.ToolTip=Copy
+MessageWindowToolbar.SelectAll.ToolTip=Select All
 MessageWindowToolbar.Print.ToolTip=Print this Message
 MessageWindowToolbar.SaveAddress.ToolTip=Add to Address Book
 MessageWindowToolbar.Detach.ToolTip=Attach/Detach Window
