@@ -98,10 +98,12 @@ MenuBar.File.EmptyTrash.Action=folder-empty
 MenuBar.File.Exit.Action=file-exit
 MenuBar.File.Exit.Image=/net/suberic/pooka/gui/images/Exit.gif
 
-#MenuBar.Edit=UserConfig:StoreConfig:OutgoingConfig:ConnectionConfig:Folders:Undo:Select All:Cut:Copy:Paste
-MenuBar.Edit=Cut:Copy:Paste
-MenuBar.Edit.Undo.Action=undo-action
+#MenuBar.Edit=UserConfig:StoreConfig:OutgoingConfig:ConnectionConfig:Folders:Undo:Select All:Cut:Copy:Paste:SelectAll
+MenuBar.Edit=Cut:Copy:Paste:Undo:Redo:SelectAll
+MenuBar.Edit.Undo.Action=edit-undo
 MenuBar.Edit.Undo.Image=/net/suberic/pooka/gui/images/Undo.gif
+MenuBar.Edit.Redo.Action=edit-redo
+MenuBar.Edit.Redo.Image=/net/suberic/pooka/gui/images/Redo.gif
 MenuBar.Edit.Select All.Action=select-all
 MenuBar.Edit.Select All.Image=/net/suberic/pooka/gui/images/Select.gif
 MenuBar.Edit.Cut.Action=cut-to-clipboard
@@ -110,6 +112,8 @@ MenuBar.Edit.Copy.Action=copy-to-clipboard
 MenuBar.Edit.Copy.Image=/net/suberic/pooka/gui/images/Copy.gif
 MenuBar.Edit.Paste.Action=paste-from-clipboard
 MenuBar.Edit.Paste.Image=/net/suberic/pooka/gui/images/Paste.gif
+MenuBar.Edit.SelectAll.Action=select-all
+MenuBar.Edit.SelectAll.Image=/net/suberic/pooka/gui/images/Select.gif
 
 MenuBar.Mail=NewMsg:Reply:ReplyAll:ReplyMulti:Forward:ForwardMulti:Send:Move:Copy:Delete:Expunge:AddSignature:SearchFolder:Subscribe
 
@@ -177,7 +181,7 @@ MainToolbar.Paste.Image=/net/suberic/pooka/gui/images/Paste.gif
 MainToolbar.Print.Action=file-print
 MainToolbar.Print.Image=/net/suberic/pooka/gui/images/Print.gif
 
-FolderWindowToolbar=Down:Up:Open:Reply:ReplyAll:Delete:Print:Search
+FolderWindowToolbar=Down:Up:Open:Reply:ReplyAll:Delete:SelectAll:Print:Search
 FolderWindowToolbar.Down.Action=message-next
 FolderWindowToolbar.Down.Image=/net/suberic/pooka/gui/images/Down.gif
 FolderWindowToolbar.Up.Action=message-previous
@@ -190,6 +194,8 @@ FolderWindowToolbar.ReplyAll.Action=message-reply-all
 FolderWindowToolbar.ReplyAll.Image=/net/suberic/pooka/gui/images/ReplyAll.gif
 FolderWindowToolbar.Delete.Action=message-delete
 FolderWindowToolbar.Delete.Image=/net/suberic/pooka/gui/images/Delete.gif
+FolderWindowToolbar.SelectAll.Action=select-all
+FolderWindowToolbar.SelectAll.Image=/net/suberic/pooka/gui/images/Select.gif
 FolderWindowToolbar.Print.Action=file-print
 FolderWindowToolbar.Print.Image=/net/suberic/pooka/gui/images/Print.gif
 FolderWindowToolbar.Search.Action=folder-search
@@ -205,7 +211,7 @@ OutboxWindowToolbar.Open.Image=/net/suberic/pooka/gui/images/Open.gif
 OutboxWindowToolbar.Send.Action=folder-send
 OutboxWindowToolbar.Send.Image=/net/suberic/pooka/gui/images/Envelope.gif
 
-NewMessageWindowToolbar=Send:AttachFile:|:Cut:Copy:Paste:Print:|:Detach
+NewMessageWindowToolbar=Send:AttachFile:|:Cut:Copy:Paste:Undo:Redo:SelectAll:|:Print:|:Detach
 NewMessageWindowToolbar.Send.Action=message-send
 NewMessageWindowToolbar.Send.Image=/net/suberic/pooka/gui/images/Envelope.gif
 NewMessageWindowToolbar.AttachFile.Action=message-attach-file
@@ -216,12 +222,18 @@ NewMessageWindowToolbar.Copy.Action=copy-to-clipboard
 NewMessageWindowToolbar.Copy.Image=/net/suberic/pooka/gui/images/Copy.gif
 NewMessageWindowToolbar.Paste.Action=paste-from-clipboard
 NewMessageWindowToolbar.Paste.Image=/net/suberic/pooka/gui/images/Paste.gif
+NewMessageWindowToolbar.Undo.Action=edit-undo
+NewMessageWindowToolbar.Undo.Image=/net/suberic/pooka/gui/images/Undo.gif
+NewMessageWindowToolbar.Redo.Action=edit-redo
+NewMessageWindowToolbar.Redo.Image=/net/suberic/pooka/gui/images/Redo.gif
+NewMessageWindowToolbar.SelectAll.Action=select-all
+NewMessageWindowToolbar.SelectAll.Image=/net/suberic/pooka/gui/images/Select.gif
 NewMessageWindowToolbar.Print.Action=file-print
 NewMessageWindowToolbar.Print.Image=/net/suberic/pooka/gui/images/Print.gif
 NewMessageWindowToolbar.Detach.Action=window-detach
 NewMessageWindowToolbar.Detach.Image=/net/suberic/pooka/gui/images/Object.gif
 
-MessageWindowToolbar=Reply:ReplyAll:Forward:Delete:|:Copy:|:SaveAddress:|:Detach
+MessageWindowToolbar=Reply:ReplyAll:Forward:Delete:|:Copy:SelectAll:|:SaveAddress:|:Detach
 MessageWindowToolbar.Reply.Action=message-reply
 MessageWindowToolbar.Reply.Image=/net/suberic/pooka/gui/images/Reply.gif
 MessageWindowToolbar.ReplyAll.Action=message-reply-all
@@ -232,6 +244,8 @@ MessageWindowToolbar.Delete.Action=message-delete
 MessageWindowToolbar.Delete.Image=/net/suberic/pooka/gui/images/Delete.gif
 MessageWindowToolbar.Copy.Action=copy-to-clipboard
 MessageWindowToolbar.Copy.Image=/net/suberic/pooka/gui/images/Copy.gif
+MessageWindowToolbar.SelectAll.Action=select-all
+MessageWindowToolbar.SelectAll.Image=/net/suberic/pooka/gui/images/Select.gif
 MessageWindowToolbar.SaveAddress.Action=message-save-address
 MessageWindowToolbar.SaveAddress.Image=/net/suberic/pooka/gui/images/DataStore.gif
 MessageWindowToolbar.Detach.Action=window-detach
